--- a/Release-notes.txt
+++ b/Release-notes.txt
@@ -1,7 +1,13 @@
 Features
 ****************************************************
 > On the go search which provides results as per the keyword typed.
-> Improved performance which avoids overload of data.
 > Easy user interface which can be easily understandable.
 > Mobile friendly
+
+
+Fixes to be done
+****************************************************
+
+> Improved performance by avoiding overload of data.
+> Smooth scroll implementation
 
